--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "@unform/core": "^2.1.4",
     "@unform/mobile": "^2.1.4",
-    "react": "16.13.1",
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-iphone-x-helper": "^1.3.1",
@@ -23,17 +26,20 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.0.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/": "react-navigation/native",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components-react-native": "^5.1.1",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-jest": "^25.1.0",
@@ -50,7 +56,7 @@
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.3"
   },
   "jest": {
     "preset": "react-native",
