--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
+    "camelcase": "off",
     "react-hooks/rules-of-hooks": "error",
     "prettier/prettier": "error",
     "react-hooks/exhaustive-deps": "warn",
